--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.22.9",
     "@hookform/devtools": "^4.3.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
