--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.22.9",
+    "@babel/preset-react": "^7.22.5",
     "@hookform/devtools": "^4.3.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.1",
-    "eslint": "^8.43.0",
+    "eslint": "^8.46.0",
     "eslint-plugin-react": "^7.25.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
